# dotfiles

./: Xresources  emacs  emacs.el  generalrc  generalrc.sh  offlineimap.py  offlineimaprc  tmux.conf  xmobarrc  xmonad.hs
myx/: .gitignore  LICENSE  myx.cabal
myx/src/: xmonad.hs
