name:             myx
version:          0.1.0.0
-- synopsis:
-- description:
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter <gdritter@galois.com>
maintainer:       Getty Ritter <gdritter@galois.com>
copyright:        ©2017 Getty Ritter
-- category:
build-type:       Simple
cabal-version:    >= 1.14

executable xmonad
  hs-source-dirs:      src
  main-is:             xmonad.hs
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5
                     , xmonad
                     , containers
                     , unix
                     , process
                     , directory
                     , xmonad-contrib
                     , data-default
                     , X11
  default-language:    Haskell2010
